[package]

name = "ox"
version = "0.0.1"
authors = ["okey <oscar.c.key@gmail.com>"]

include = ["Cargo.toml", "src/**/*.rs", "src/**/*.rustpeg"]
license = "MIT"
description = "An NWScript bytecode disassembler."

build = "build.rs"

[dependencies]
peg = "0.5.4"
byteorder = "0.5.3"
docopt = "1.0.0"
serde = "1.0.70"
serde_derive = "1.0.70"
#rustc-serialize = "0.3.19"
#peg-syntax-ext = "0.5.0"

[build-dependencies]
peg = { version = "0.5" }
